# brain-ai

./: .gitignore  00_START_HERE.md  ENVIRONMENT.md  ENV_STATUS.txt  INDEX.md  PHASE_1_SUMMARY.md  PHASE_2_QUICK_START.md  QUICKSTART.md  README.md  README_PHASE_1.md  SETUP_COMPLETE.md  START_HERE.md  VERIFICATION_REPORT.txt  output_file.txt  pyproject.toml  requirements.txt  setup.py  setup_environment.sh
.github/workflows/: publish.yml
brain_ai/agents/: executor.py  planner.py
brain_ai/core/: __init__.py  brain.py  pipeline.py
brain_ai/dag/: __init__.py  builder.py  visualizer.py
brain_ai/decision/: __init__.py
brain_ai/experiments/: __init__.py  leaderboard.py  runner.py
brain_ai/fusion/: README.md  base.py  intermediate.py
brain_ai/granularity/: README.md  __init__.py  attention.py  base.py  pooling.py  resample.py
brain_ai/models/: README.md  __init__.py  base.py
brain_ai/rl/: action.py  environment.py  policy.py
brain_ai/utils/: __init__.py  datasets.py
data/: .$BrainAI_Design.drawio.html.bkp  .$LowLevelDesign.drawio.html.bkp  .$LowLevelDesign.drawio.html.dtmp  .$pipeline.drawio.html.bkp  .$pipeline.drawio.html.dtmp  BrainAI_Design.drawio.html  LowLevelDesign.drawio.html  pipeline.drawio.html
docs/: 01_project_vision.md  02_architecture.md  03_research_strategy.md  04_competition.md  05_roadmap.md  ARCHITECTURE_MIGRATION_GUIDE.md  MULTIMODAL_ARCHITECTURE_PLAN.md  PHASE_1_COMPLETION_SUMMARY.md  instructions.txt  requirements-notebook.txt
docs/notebooks/: 01_time_series_forecasting.ipynb  README.md
examples/: dataset.csv  demo_multimodal_framework.py  experiments_forecasting_comparison.ipynb  framework_forecasting_test.ipynb  multimodal_test.ipynb  run_example_sklearn.py  study2_framework_forecasting_test.ipynb  tier_1_forecasting_benchmark_code.py  time_series_forecasting.ipynb  volatility_checking.ipynb
examples/5apr2026/: Hybrid_ML_Equity_Forecasting_LNNS_9000w(3).docx.md  Study2_Final_Consistent_LNNS(3).docx.md
examples/volatility_output/: best_model_per_stock_rmse.csv  brain_automl_volatility_leaderboard.csv  combined_volatility_metrics.csv  dataset_with_volatility.csv  garch_egarch_metrics.csv  overall_best_models_rmse.csv  run_manifest.csv  (+1 more)
tests/: __init__.py  test_additional_coverage.py  test_backward_compatibility.py  test_core_architecture.py  test_decision_and_spec.py  test_forecasting_automl.py  test_integration_experiments.py  test_modality_planning.py  test_pipeline_behaviors.py
(+166 files in other folders)
